[package]
name = "timestamper"
version = "0.1.0"
authors = ["Charlie Stanton <charlie@shtanton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1.1"
serde = "1.0.111"
serde_json = "1.0.53"
iced_native = "0.2.2"
